# elendirna

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md
.elendirna/: config.toml  index.sqlite  sync.jsonl
.github/workflows/: rust.yml
demo_vault/: AGENTS.md  GEMINI.md
demo_vault/.claude/: settings.local.json
demo_vault/.elendirna/: sync.jsonl
entries/N0001_elendirna_project_overview/: manifest.toml  note.md
entries/N0005_cmd_entry/: manifest.toml  note.md
entries/N0006_cmd_graph/: note.md
entries/N0007_cmd_init/: manifest.toml  note.md
entries/N0008_cmd_link/: note.md
entries/N0009_cmd_revision/: note.md
entries/N0013_plan_v02/: manifest.toml
entries/N0014_scenario/: note.md
entries/N0015_001_mcp_auto_init/: note.md
entries/N0016_002_mcp_server_config_auto_add/: note.md
entries/N0017_proposals_readme/: note.md
entries/N0018_v03_discussion_notes/: manifest.toml  note.md
milestones/: COMMANDS.md  PLAN_v0.2.md  ROADMAP.md
milestones/done/: PLAN_v0.1.md  PLAN_v0.1_fix.md  SCENARIO.md  cmd-entry.md  cmd-graph.md  cmd-init.md  cmd-link.md  cmd-revision.md  cmd-validate.md
milestones/proposals/: 001-mcp-auto-init.md  002-mcp-server-config-auto-add.md  README.md
revisions/N0011/: r0001.md
revisions/N0018/: r0001.md  r0002.md  r0003.md  r0004.md  r0005.md  r0007.md
src/: error.rs  lib.rs  main.rs
src/cli/: bundle.rs  entry.rs  graph.rs  help.rs  init.rs  link.rs  migrate.rs  mod.rs  query.rs  revision.rs  serve.rs  sync.rs  tests.rs  (+1 more)
tests/: integration.rs  mcp_integration.rs  sqlite_integration.rs
(+145 files in other folders)
