[package]
name = "elendirna"
version = "0.4.3"
edition = "2024"
description = "Agent-friendly knowledge base CLI. Manages personal knowledge as Base-Delta entries with AI-enforced conventions."
license = "MIT"
repository = "https://github.com/RainyLens/elendirna"
readme = "README.md"
keywords = ["knowledge-base", "cli", "ai", "notes", "markdown"]
categories = ["command-line-utilities"]

[lib]
name = "elendirna"
path = "src/lib.rs"

[[bin]]
name = "elf"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
toml        = "0.8"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
anyhow      = "1"
chrono      = { version = "0.4", features = ["serde"] }
walkdir     = "2"
regex       = "1"

# v0.2: MCP 서버
rmcp        = { version = "1", features = ["server", "macros", "schemars", "transport-io"] }
tokio       = { version = "1", features = ["full"] }
schemars    = "1"

# v0.2: sqlite 인덱스
rusqlite    = { version = "0.39", features = ["bundled"] }

[dev-dependencies]
insta       = { version = "1", features = ["toml"] }
tempfile    = "3"
assert_cmd  = "2"
